@@ -1426,6 +1426,8 @@ code {
 
 <p><strong>tab_offset</strong> | <code>point</code> | Offset for the row of tabs.</p>
 
+<p><strong>background_offset</strong> | <code>point</code> | Offset of the background image. Defaults to a calculated value based on the tab height.</p>
+
 <p><strong>activemods</strong> | <code>int, int, int, int : Label X, Label Y, Widget X, Widget Y</code> | Position of the "Active Mods" list box relative to the frame.</p>
 
 <p><strong>activemods_height</strong> | <code>int</code> | Number of visible rows for the "Active Mods" list box.</p>
