@@ -11,6 +11,7 @@ Engine features:
 * Added 'default_zoom_level' property to menu/minimap.txt config.
 * Added support for developer mode command shortcuts.
 * Added 'powers_overlap_slots' to menu/actionbar.txt config.
+* Added 'background_offset' to menu/config.txt config.
 
 Engine fixes:
 
